# screenstranslate

./: .gitignore  README.md  ScreensTranslatePro.spec  docuemento_proyecto.md  pyproject.toml  requirements.txt
infra/supabase/: README.md
infra/supabase/functions/activate-license/: index.ts
infra/supabase/sql/: 001_create_licenses.sql
installer/: ScreensTranslatePro.iss
src/screenstranslate/: __init__.py  __main__.py  capture.py  config.py  history.py  history_ui.py  hotkey.py  hotkey_input.py  licensing.py  main.py  ocr.py  overlay.py  selector.py  translation.py
web/: package-lock.json  package.json
web/src/app/: Brand.tsx  CleanSessionQuery.tsx  ClientLayoutShell.tsx  CopyLicenseButton.tsx  DownloadButton.tsx  LanguageSwitcher.tsx  LocaleLink.tsx  OverlayPreview.tsx  SeoSoftwareJsonLd.tsx  i18nLayout.tsx  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/src/app/admin/: layout.tsx
web/src/app/admin/licenses/: page.tsx
web/src/app/api/license/: route.ts
web/src/app/api/translate/: route.ts
web/src/app/caracteristicas/: page.tsx
web/src/app/como-funciona/: page.tsx
web/src/app/en/: page.tsx
web/src/app/en/caracteristicas/: page.tsx
web/src/app/en/como-funciona/: page.tsx
web/src/app/en/faq/: page.tsx
web/src/app/en/panel/: page.tsx
web/src/app/en/pricing/: page.tsx
web/src/app/faq/: page.tsx
web/src/app/fr/: page.tsx
web/src/app/lib/: getLicenseForSession.ts
web/src/app/panel/: LicensePanelClient.tsx  LicensePanelClientEn.tsx  LicensePanelClientFr.tsx  page.tsx
web/src/app/pricing/: page.tsx
web/src/app/thanks/: page.tsx
(+17 files in other folders)
